<resources>
  <dimen name="app_head_text_size">10sp</dimen>
  <dimen name="chat_msg_text_size">20sp</dimen>
  <dimen name="max_chat_width">30dp</dimen>
  <string name="app_name">ChatVer5</string>
  <string name="full_chattext_default">default string value</string>
  <string name="btnAddStr">추가</string>
  <string name="sign_up">Sign up</string>
  <string name="login">Login</string>
  <string name="default_login_id">CHOSC</string>
  <string name="default_pwd">PWD</string>
  <string name="id_label">ID</string>
  <string name="pwd_label">PWD</string>
  <string name="def_name">def_name</string>
  <string name="def_email">def_email</string>
  <string name="hint_email">이메일</string>
  <string name="hint_name">이름</string>
  <string name="def_pwd">def_pwd</string>
  <string name="hint_pwd">비밀번호</string>
  <string name="hint_pwd_check">비밀번호 확인</string>
  <string name="def_register_title">회원가입</string>
  <string name="tv_name">이름 :</string>
  <string name="tv_email">이메일 :</string>
  <string name="tv_pwd">비밀번호 :</string>
  <string name="tv_pwd_check">비밀번호 확인 :</string>
  <string name="btn_register">등록</string>
  <string name="tv_birth">생년월일 :</string>
  <string name="inputBirth">선택</string>
  <string name="def_phone">010–0000–0000</string>
  <string name="tv_phone">전화번호 :</string>
  <string name="tv_nick">닉네임 :</string>
  <string name="hint_nick">닉네임</string>
  <string name="def_nick">def_nick</string>
  <string name="tv_login_title">로그인</string>
  <string name="tv_email_login">아이디 :</string>
  <string name="et_email_login">dummy@gmail.com</string>
  <string name="tv_pwd_login">비밀번호 :</string>
  <string name="et_pwd_login">def_pwd</string>
  <string name="btn_login_login">로그인</string>
  <string name="tv_register_login">아이디를 만드세요.</string>
  <string name="tv_registerQuestion_login">계정이 없으신가요?</string>
  <string name="tv_birth_date_form">%1$d/%2$d/%3$d</string>
  <string name="web_client_id">952126393854-ml7tejvr4v0icri2gs30b1283u12j2r3.apps.googleusercontent.com</string>
  <string name="app_cur_name">노래 할래?</string>
  <string name="tv_msg_chat">msg</string>
  <string name="tv_date_chat">date</string>
  <string name="tv_nickName_chat">nickname</string>
  <string name="btn_fullText_elChat">전체보기</string>
  <string name="tv_msg_date_form">%1$s\n%2$s</string>
  <string name="tv_nick_chatGroup">%1$s 님, 어서오세요.</string>

  <string name="title_home">Home</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_notifications">Notifications</string>
  <string name="item_home_bottomNav">홈</string>
  <string name="item_map_bottomNav">지도</string>
  <string name="item_chat_bottomNav">채팅</string>
  <string name="item_profile_bottomNav">프로필</string>

</resources>