<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.LoginActivity">

  <TextView
    android:id="@+id/tvIdLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:layout_marginStart="60dp"
    android:paddingTop="5dp"
    android:text="@string/id_label"
    android:textSize="25sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/etId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="text"
    android:minHeight="48dp"
    android:text="@string/default_login_id"
    android:layout_marginStart="10dp"
    app:layout_constraintLeft_toRightOf="@id/tvIdLabel"
    app:layout_constraintTop_toTopOf="@id/tvIdLabel" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/tvPwdLabel"
    android:text="@string/pwd_label"
    app:layout_constraintTop_toBottomOf="@id/tvIdLabel"
    app:layout_constraintRight_toRightOf="@id/tvIdLabel"
    android:layout_marginTop="50dp"
    android:textSize="25sp"
    android:paddingTop="5dp"
    />

  <EditText
    android:id="@+id/etPwd"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="text"
    android:minHeight="48dp"
    android:text="@string/default_pwd"
    android:layout_marginStart="10dp"
    app:layout_constraintLeft_toRightOf="@id/tvPwdLabel"
    app:layout_constraintTop_toTopOf="@id/tvPwdLabel" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnLogin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    app:layout_constraintTop_toBottomOf="@id/etPwd"
    android:layout_marginTop="50dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintVertical_bias="0.5"
    android:textAllCaps="false"
    android:onClick="login"/>

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/btnSignUp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sign_up"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintTop_toBottomOf="@id/btnLogin"
    android:layout_marginTop="20dp"
    android:textAllCaps="false"
    android:onClick="signUp"/>
</androidx.constraintlayout.widget.ConstraintLayout>